Added dataset and short instruction

--- a/test.ipynb
+++ b/test.ipynb
@@ -53,21 +53,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import custom_models\n",
     "\n",
     "n_classes = 5\n",
     "batch_size = 64\n",
     "frame_size = (224, 224)\n",
-    "dataset_dir = 'oai224/test'\n",
+    "dataset_dir = 'dataset/oai224/test'\n",
     "\n",
     "# choose torch device\n",
     "if torch.cuda.is_available():\n",
     "    device = 'cuda:0'\n",
     "else:\n",
-    "    device = 'cpu'\n",
+    "    device = 'cpu'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#2.1. Choose architecture and model checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import custom_models\n",
     "\n",
     "# cnn_model = densenet121_model(n_classes)\n",
     "# cnn_model = densenet161_model(n_classes)\n",
+    "\n",
     "cnn_model = custom_models.AntonyCnn(n_classes)\n",
     "model_ckpt_file = 'models/antony_21.ckpt'"
    ]
