Updated source code, removed wrong models of DenseNet-161

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +81,31 @@
    "source": [
     "import custom_models\n",
     "\n",
-    "# cnn_model = densenet121_model(n_classes)\n",
-    "# cnn_model = densenet161_model(n_classes)\n",
+    "# List of available architectures\n",
+    "# cnn_model = custom_models.AntonyCnn(n_classes)\n",
+    "# cnn_model = custom_models.densenet121_model(n_classes)\n",
+    "# cnn_model = custom_models.densenet161_model(n_classes)\n",
     "\n",
-    "cnn_model = custom_models.AntonyCnn(n_classes)\n",
-    "model_ckpt_file = 'models/antony_21.ckpt'"
+    "# Example for random model\n",
+    "# cnn_model = custom_models.densenet121_model(n_classes)\n",
+    "# cnn_model.load_state_dict(torch.load('models/densenet121_42.ckpt', map_location=torch.device(device)))\n",
+    "\n",
+    "def make_densenet_121_CE():\n",
+    "    cnn_model = custom_models.densenet121_model(n_classes)\n",
+    "    cnn_model.load_state_dict(torch.load('models/densenet121_42.ckpt', map_location=torch.device(device)))\n",
+    "    return cnn_model\n",
+    "\n",
+    "def make_densenet_121_Ordinal():\n",
+    "    cnn_model = custom_models.densenet121_model(n_classes)\n",
+    "    cnn_model.load_state_dict(torch.load('models/densenet121_ORD_84.ckpt', map_location=torch.device(device)))\n",
+    "    return cnn_model\n",
+    "\n",
+    "def make_densenet_161_CE():\n",
+    "    cnn_model = custom_models.densenet161_model(n_classes)\n",
+    "    # cnn_model.load_state_dict(torch.load('models/densenet161_84.ckpt', map_location=torch.device(device)))\n",
+    "    cnn_model.load_state_dict(torch.load('models/DenseNet161_42/best_model.ckpt', map_location=torch.device(device)))\n",
+    "    \n",
+    "    return cnn_model"
    ]
   },
   {
@@ -97,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -139,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -161,22 +181,12 @@
     "id": "c6PgVEN-Bl97",
     "outputId": "ba683d93-a900-4ac0-bf26-e57ff33e189a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parameters number:  6658021\n",
-      "trainable parameters number:  6658021\n",
-      "compute accuracy...\n",
-      "test accuracy: 0.6044685990338164\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import utils\n",
     "\n",
-    "cnn_model.load_state_dict(torch.load(model_ckpt_file, map_location=torch.device(device)))\n",
+    "# choose model\n",
+    "cnn_model = make_densenet_161_CE()\n",
     "cnn_model.type(torch.FloatTensor)\n",
     "\n",
     "total_params = sum(p.numel() for p in cnn_model.parameters())\n",
