--- a/test_ensemble.ipynb
+++ b/test_ensemble.ipynb
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#4. Prepare ensemble parts"
+    "#5. Prepare ensembles"
    ]
   },
   {
@@ -110,25 +110,98 @@
    "source": [
     "import custom_models\n",
     "\n",
-    "# Choose CNN architecture and set models checkpoints\n",
-    "# cnn_model = custom_models.densenet121_model(n_classes)\n",
-    "# cnn_model = custom_models.densenet161_model(n_classes)\n",
+    "class Ensemble(nn.Module):\n",
+    "    def __init__(self, modelA, modelB, modelC, modelD = None):\n",
+    "        super(Ensemble, self).__init__()\n",
+    "        self.modelA = modelA\n",
+    "        self.modelB = modelB\n",
+    "        self.modelC = modelC\n",
+    "        self.modelD = modelD\n",
+    "      \n",
+    "    def forward(self, x):\n",
+    "        x1 = self.modelA(x)\n",
+    "        x2 = self.modelB(x)\n",
+    "        x3 = self.modelC(x)\n",
+    "        \n",
+    "        if modelD is None:\n",
+    "            xx = x1.add(x2).add(x3)\n",
+    "            return nn.functional.softmax(xx, 1)\n",
+    "        else:\n",
+    "            x4 = self.modelD(x)\n",
+    "            xx = x1.add(x2).add(x3).add(x4)\n",
+    "            return nn.functional.softmax(xx, 1)\n",
     "\n",
-    "cnn1 = custom_models.AntonyCnn(n_classes)\n",
-    "model_ckpt_file1 = 'models/antony_21.ckpt'\n",
+    "def make_3xdensenets_121_DRS():\n",
+    "    cnn1 = custom_models.densenet121_model(n_classes)\n",
+    "    cnn2 = custom_models.densenet121_model(n_classes)\n",
+    "    cnn3 = custom_models.densenet121_model(n_classes)\n",
     "\n",
-    "cnn2 = custom_models.AntonyCnn(n_classes)\n",
-    "model_ckpt_file2= 'models/antony_42.ckpt'\n",
+    "    cnn1.load_state_dict(torch.load('models/densenet121_21.ckpt', map_location=torch.device(device)))\n",
+    "    cnn2.load_state_dict(torch.load('models/densenet121_42.ckpt', map_location=torch.device(device)))  \n",
+    "    cnn3.load_state_dict(torch.load('models/densenet121_84.ckpt', map_location=torch.device(device)))  \n",
     "\n",
-    "cnn3 = custom_models.AntonyCnn(n_classes)\n",
-    "model_ckpt_file3 = 'models/antony_84.ckpt'\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#5. Prepare ensemble object"
+    "    cnn_model = Ensemble(cnn1, cnn2, cnn3)\n",
+    "    cnn_model.type(torch.FloatTensor)\n",
+    "    \n",
+    "    return cnn_model\n",
+    "\n",
+    "def make_3xdensenets_121_DCH():\n",
+    "    cnn1 = custom_models.densenet121_model(n_classes)\n",
+    "    cnn2 = custom_models.densenet121_model(n_classes)\n",
+    "    cnn3 = custom_models.densenet121_model(n_classes)\n",
+    "\n",
+    "    cnn1.load_state_dict(torch.load('models/densenet121_42.ckpt', map_location=torch.device(device)))\n",
+    "    cnn2.load_state_dict(torch.load('models/densenet121_42.ckpt-15', map_location=torch.device(device)))  \n",
+    "    cnn3.load_state_dict(torch.load('models/densenet121_42.ckpt-18', map_location=torch.device(device)))  \n",
+    "\n",
+    "    cnn_model = Ensemble(cnn1, cnn2, cnn3)\n",
+    "    cnn_model.type(torch.FloatTensor)\n",
+    "    \n",
+    "    return cnn_model\n",
+    "\n",
+    "# def make_3xdensenets_161_DRS():\n",
+    "#     cnn1 = custom_models.densenet161_model(n_classes)\n",
+    "#     cnn2 = custom_models.densenet161_model(n_classes)\n",
+    "#     cnn3 = custom_models.densenet161_model(n_classes)\n",
+    "# \n",
+    "#     cnn1.load_state_dict(torch.load('models/densenet161_21.ckpt', map_location=torch.device(device)))\n",
+    "#     cnn2.load_state_dict(torch.load('models/densenet161_42.ckpt', map_location=torch.device(device)))  \n",
+    "#     cnn3.load_state_dict(torch.load('models/densenet161_84.ckpt', map_location=torch.device(device)))  \n",
+    "# \n",
+    "#     cnn_model = Ensemble(cnn1, cnn2, cnn3)\n",
+    "#     cnn_model.type(torch.FloatTensor)\n",
+    "#     \n",
+    "#     return cnn_model\n",
+    "\n",
+    "# def make_3xdensenets_161_DCH():\n",
+    "#     cnn1 = custom_models.densenet161_model(n_classes)\n",
+    "#     cnn2 = custom_models.densenet161_model(n_classes)\n",
+    "#     cnn3 = custom_models.densenet161_model(n_classes)\n",
+    "# \n",
+    "#     cnn1.load_state_dict(torch.load('models/densenet161_84.ckpt', map_location=torch.device(device)))\n",
+    "#     cnn2.load_state_dict(torch.load('models/densenet161_84.ckpt-22', map_location=torch.device(device)))  \n",
+    "#     cnn3.load_state_dict(torch.load('models/densenet161_84.ckpt-23', map_location=torch.device(device)))  \n",
+    "# \n",
+    "#     cnn_model = Ensemble(cnn1, cnn2, cnn3)\n",
+    "#     cnn_model.type(torch.FloatTensor)\n",
+    "#    \n",
+    "#     return cnn_model\n",
+    "\n",
+    "def make_4xdensenets_121_161():\n",
+    "    cnn1 = custom_models.densenet121_model(n_classes)\n",
+    "    cnn2 = custom_models.densenet121_model(n_classes)\n",
+    "    cnn3 = custom_models.densenet161_model(n_classes)\n",
+    "    # cnn4 = custom_models.densenet161_model(n_classes)\n",
+    "\n",
+    "    cnn1.load_state_dict(torch.load('models/densenet121_21.ckpt', map_location=torch.device(device)))\n",
+    "    cnn2.load_state_dict(torch.load('models/densenet121_42.ckpt', map_location=torch.device(device)))  \n",
+    "    cnn3.load_state_dict(torch.load('models/densenet161_42.ckpt', map_location=torch.device(device)))   \n",
+    "    # cnn4.load_state_dict(torch.load('models/densenet161_84.ckpt', map_location=torch.device(device))) \n",
+    "\n",
+    "    cnn_model = Ensemble(cnn1, cnn2, cnn3)\n",
+    "    cnn_model.type(torch.FloatTensor)\n",
+    "    \n",
+    "    return cnn_model"
    ]
   },
   {
@@ -137,29 +210,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Ensemble(nn.Module):\n",
-    "    def __init__(self, modelA, modelB, modelC):\n",
-    "        super(Ensemble, self).__init__()\n",
-    "        self.modelA = modelA\n",
-    "        self.modelB = modelB\n",
-    "        self.modelC = modelC\n",
-    "      \n",
-    "    def forward(self, x):\n",
-    "        x1 = self.modelA(x)\n",
-    "        x2 = self.modelB(x)\n",
-    "        x3 = self.modelC(x)\n",
-    "        \n",
-    "        # sum\n",
-    "        xx = x1.add(x2).add(x3)\n",
-    "    \n",
-    "        return nn.functional.softmax(xx, 1)\n",
-    "\n",
-    "cnn1.load_state_dict(torch.load(model_ckpt_file1, map_location=torch.device(device)))\n",
-    "cnn2.load_state_dict(torch.load(model_ckpt_file2, map_location=torch.device(device)))  \n",
-    "cnn3.load_state_dict(torch.load(model_ckpt_file3, map_location=torch.device(device)))  \n",
-    "\n",
-    "cnn_model = Ensemble(cnn1, cnn2, cnn3)\n",
-    "cnn_model.type(torch.FloatTensor)\n"
+    "cnn_model = make_3xdensenets_121_DRS()\n",
+    "# cnn_model = make_3xdensenets_121_DCH()\n",
+    "# cnn_model = make_3xdensenets_161_DRS()\n",
+    "# cnn_model = make_3xdensenets_161_DCH()\n",
+    "# cnn_model = make_4xdensenets_121_161()"
    ]
   },
   {
